crates/pg_syntax/tests/snapshots/postgres_regress/polygon@17.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO quad_poly_tbl\n\tSELECT i, polygon '((200, 300),(210, 310),(230, 290))'\n\tFROM generate_series(10001, 11000) AS i;"
---
InsertStmt@0..123
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..25
    Ident@12..25 "quad_poly_tbl"
  Newline@25..26 "\n"
  Newline@26..27 "\t"
  SelectStmt@27..122
    Select@27..33 "SELECT"
    Whitespace@33..34 " "
    ResTarget@34..35
      ColumnRef@34..35
        Ident@34..35 "i"
    Ascii44@35..36 ","
    Whitespace@36..37 " "
    ResTarget@37..83
      Ident@37..44 "polygon"
      Whitespace@44..45 " "
      TypeCast@45..83
        AConst@45..81
          Sconst@45..81 "'((200, 300),(210, 31 ..."
        Newline@81..82 "\n"
        Newline@82..83 "\t"
    From@83..87 "FROM"
    Whitespace@87..88 " "
    RangeFunction@88..122
      List@88..116
        FuncCall@88..116
          Ident@88..103 "generate_series"
          Ascii40@103..104 "("
          AConst@104..109
            Iconst@104..109 "10001"
          Ascii44@109..110 ","
          Whitespace@110..111 " "
          AConst@111..116
            Iconst@111..116 "11000"
      Ascii41@116..117 ")"
      Whitespace@117..118 " "
      Alias@118..122
        As@118..120 "AS"
        Whitespace@120..121 " "
        Ident@121..122 "i"
  Ascii59@122..123 ";"

