crates/pg_syntax/tests/snapshots/postgres_regress/polygon@18.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO quad_poly_tbl\n\tVALUES\n\t\t(11001, NULL),\n\t\t(11002, NULL),\n\t\t(11003, NULL);"
---
InsertStmt@0..84
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..25
    Ident@12..25 "quad_poly_tbl"
  Newline@25..26 "\n"
  Newline@26..27 "\t"
  SelectStmt@27..82
    Values@27..33 "VALUES"
    Newline@33..34 "\n"
    Newline@34..36 "\t\t"
    Ascii40@36..37 "("
    List@37..48
      AConst@37..42
        Iconst@37..42 "11001"
      Ascii44@42..43 ","
      Whitespace@43..44 " "
      AConst@44..48
        NullP@44..48 "NULL"
    Ascii41@48..49 ")"
    Ascii44@49..50 ","
    Newline@50..51 "\n"
    Newline@51..53 "\t\t"
    Ascii40@53..54 "("
    List@54..65
      AConst@54..59
        Iconst@54..59 "11002"
      Ascii44@59..60 ","
      Whitespace@60..61 " "
      AConst@61..65
        NullP@61..65 "NULL"
    Ascii41@65..66 ")"
    Ascii44@66..67 ","
    Newline@67..68 "\n"
    Newline@68..70 "\t\t"
    Ascii40@70..71 "("
    List@71..82
      AConst@71..76
        Iconst@71..76 "11003"
      Ascii44@76..77 ","
      Whitespace@77..78 " "
      AConst@78..82
        NullP@78..82 "NULL"
  Ascii41@82..83 ")"
  Ascii59@83..84 ";"

