crates/pg_syntax/tests/snapshots/postgres_regress/polygon@19.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE INDEX quad_poly_tbl_idx ON quad_poly_tbl USING spgist(p);
---
IndexStmt@0..64
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Index@7..12 "INDEX"
  Whitespace@12..13 " "
  Ident@13..30 "quad_poly_tbl_idx"
  Whitespace@30..31 " "
  On@31..33 "ON"
  Whitespace@33..34 " "
  RangeVar@34..47
    Ident@34..47 "quad_poly_tbl"
  Whitespace@47..48 " "
  Using@48..53 "USING"
  Whitespace@53..54 " "
  Ident@54..60 "spgist"
  Ascii40@60..61 "("
  IndexElem@61..62
    Ident@61..62 "p"
  Ascii41@62..63 ")"
  Ascii59@63..64 ";"

