crates/pg_syntax/tests/snapshots/postgres_regress/portals@123.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE FUNCTION declares_cursor(text)\n   RETURNS void\n   AS 'DECLARE c CURSOR FOR SELECT stringu1 FROM tenk1 WHERE stringu1 LIKE $1;'\n   LANGUAGE SQL;"
---
CreateFunctionStmt@0..150
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Function@7..15 "FUNCTION"
  Whitespace@15..16 " "
  Ident@16..31 "declares_cursor"
  Ascii40@31..32 "("
  FunctionParameter@32..36
    TypeName@32..36
      TextP@32..36 "text"
  Ascii41@36..37 ")"
  Newline@37..38 "\n"
  Whitespace@38..41 "   "
  Returns@41..48 "RETURNS"
  Whitespace@48..49 " "
  TypeName@49..53
    Ident@49..53 "void"
  Newline@53..54 "\n"
  Whitespace@54..57 "   "
  DefElem@57..133
    As@57..59 "AS"
    Whitespace@59..60 " "
    List@60..133
      Sconst@60..133 "'DECLARE c CURSOR FOR ..."
  Newline@133..134 "\n"
  Whitespace@134..137 "   "
  DefElem@137..149
    Language@137..145 "LANGUAGE"
    Whitespace@145..146 " "
    SqlP@146..149 "SQL"
  Ascii59@149..150 ";"

